--- a/inst/params/default/prepare_libraries_sop_merged.yaml
+++ b/inst/params/default/prepare_libraries_sop_merged.yaml
@@ -39,6 +39,9 @@ files:
 
         #' Structures libraries.
         structures:
+          #' Structures processed. STRING
+          processed: data/interim/libraries/sop/merged/structures/processed.csv.gz
+
           #' Structures stereo. STRING
           stereo: data/interim/libraries/sop/merged/structures/stereo.tsv.gz
 
