--- a/inst/paths.yaml
+++ b/inst/paths.yaml
@@ -35,6 +35,7 @@ data:
               ott: data/interim/libraries/sop/merged/organisms/taxonomies/ott.tsv.gz
           structures:
             path: data/interim/libraries/sop/merged/structures
+            processed: data/interim/libraries/sop/merged/structures/processed.csv.gz
             stereo: data/interim/libraries/sop/merged/structures/stereo.tsv.gz
             metadata: data/interim/libraries/sop/merged/structures/metadata.tsv.gz
             names: data/interim/libraries/sop/merged/structures/names.tsv.gz
@@ -201,6 +202,7 @@ urls:
       neg: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_neg.mgf
       pos: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_pos.mgf
       with_rt: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/spectral_lib_mini_with_rt.mgf
+    structures_processed: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/processed.csv.gz
     wikidata_spectral_prepared: https://github.com/taxonomicallyinformedannotation/tima-example-files/raw/main/wikidata_spectral_prepared.tsv.gz
   ecmdb:
     metabolites: https://ecmdb.ca/download/ecmdb.json.zip
