--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -50,6 +50,10 @@ jobs:
           extra-packages: any::pkgdown, local::.
           needs: website
 
+      - name: Install
+        run: tima::install()
+        shell: Rscript {0}
+
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
