--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_params)
 export(go_to_cache)
 export(import_spectra)
 export(install)
+export(join_gnps_wrapper)
 export(log_debug)
 export(parse_adduct)
 export(prepare_annotations_gnps)
