--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,10 +33,10 @@ Imports:
     fs (>= 1.6.5),
     gt (>= 0.11.1),
     httr (>= 1.4.7),
-    httr2 (>= 1.1.0),
+    httr2 (>= 1.1.1),
     igraph (>= 2.1.4),
     IRanges (>= 2.36.0),
-    jsonlite (>= 1.9.0),
+    jsonlite (>= 1.9.1),
     methods,
     MetaboCoreUtils (>= 1.10.0),
     MsBackendMgf (>= 1.10.0),
@@ -44,11 +44,11 @@ Imports:
     MsCoreUtils (>= 1.14.1),
     msentropy (>= 0.1.4),
     purrr (>= 1.0.4),
-    reticulate (>= 1.41.0),
+    reticulate (>= 1.41.0.1),
     rotl (>= 3.1.0),
     shiny (>= 1.10.0),
     shinybusy (>= 0.3.3),
-    shinyWidgets (>= 0.8.7),
+    shinyWidgets (>= 0.9.0),
     Spectra (>= 1.12.0),
     stats,
     stringi (>= 1.8.4),
@@ -91,6 +91,8 @@ X-schema.org-keywords: metabolite annotation, chemotaxonomy, scoring
     system, natural products, computational metabolomics, taxonomic
     distance, specialized metabolome
 Collate:
+    'adducts_translations.R'
+    'aducts_forbidden.R'
     'round_reals.R'
     'harmonize_adducts.R'
     'parse_yaml_params.R'
