--- a/inst/params/default/annotate_spectra.yaml
+++ b/inst/params/default/annotate_spectra.yaml
@@ -22,11 +22,13 @@ files:
       #' List of negative spectral libraries. STRING
       neg:
         - data/interim/libraries/spectra/exp/massbank_neg.rds
+        - data/interim/libraries/spectra/exp/merlin_neg.rds
         - data/interim/libraries/spectra/is/wikidata_neg.rds
 
       #' List of positive spectral libraries. STRING
       pos:
         - data/interim/libraries/spectra/exp/massbank_pos.rds
+        - data/interim/libraries/spectra/exp/merlin_pos.rds
         - data/interim/libraries/spectra/is/wikidata_pos.rds
 
   #' Spectral files. STRING
