--- a/inst/params/default/prepare_libraries_sop_merged.yaml
+++ b/inst/params/default/prepare_libraries_sop_merged.yaml
@@ -17,8 +17,10 @@ files:
         lotus: data/interim/libraries/sop/lotus_prepared.tsv.gz
         #' RT prepared structure organism pairs library. STRING
         rt: data/interim/libraries/sop/rt_prepared.tsv.gz
-        #' Spectral prepared structure organism pairs library. STRING
-        spectral: data/interim/libraries/sop/spectral_prepared.tsv.gz
+        #' Massbank spectral prepared structure organism pairs library. STRING
+        massbank: data/interim/libraries/sop/massbank_spectral_prepared.tsv.gz
+        #' Merlin spectral prepared structure organism pairs library. STRING
+        merlin: data/interim/libraries/sop/merlin_spectral_prepared.tsv.gz
         #' Wikidata spectral prepared structure organism pairs library. STRING
         wikidata: data/interim/libraries/sop/wikidata_spectral_prepared.tsv.gz
 
