--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -177,6 +177,7 @@ files:
 
       #' List of positive spectral libraries. STRING
       pos:
+        - data/interim/libraries/spectra/exp/massbank_pos.rds
         - data/interim/libraries/spectra/exp/merlin_pos.rds
         - data/interim/libraries/spectra/is/wikidata_pos.rds
 
