--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -78,9 +78,7 @@ SystemRequirements:
     python (>= 3.10)
 VignetteBuilder:
     knitr
-biocViews: metabolite annotation, chemotaxonomy, scoring system, natural
-    products, computational metabolomics, taxonomic distance, specialized
-    metabolome
+biocViews: metaboliteAnnotation, chemotaxonomy, scoringSystem, naturalProducts, computationalMetabolomics, taxonomicDistance, specializedMetabolome
 ByteCompile: true
 Config/Needs/website: rmarkdown
 Config/testthat/edition: 3
@@ -89,9 +87,7 @@ Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-X-schema.org-keywords: metabolite annotation, chemotaxonomy, scoring
-    system, natural products, computational metabolomics, taxonomic
-    distance, specialized metabolome
+X-schema.org-keywords: metaboliteAnnotation, chemotaxonomy, scoringSystem, naturalProducts, computationalMetabolomics, taxonomicDistance, specializedMetabolome
 Collate:
     'adducts_forbidden.R'
     'adducts_translations.R'
