--- a/inst/params/default/create_edges_spectra.yaml
+++ b/inst/params/default/create_edges_spectra.yaml
@@ -23,8 +23,8 @@ ms:
   thresholds:
     #' MS2 related parameters.
     ms2:
-      #' Intensity threshold for MS2. INTEGER
-      intensity: 5
+      #' Intensity threshold for MS2. FLOAT
+      intensity: 5.0
 
   #' Tolerances.
   tolerances:
@@ -33,7 +33,7 @@ ms:
       #' Relative in ppm.
       ppm:
         #' Relative mass tolerance for MS2 in ppm. FLOAT
-        ms2: 10
+        ms2: 10.0
 
       #' Absolute in Dalton.
       dalton:
