--- a/inst/params/default/annotate_spectra.yaml
+++ b/inst/params/default/annotate_spectra.yaml
@@ -44,8 +44,8 @@ ms:
   thresholds:
     #' MS2 related parameters.
     ms2:
-      #' Intensity threshold for MS2. INTEGER
-      intensity: 5
+      #' Intensity threshold for MS2. FLOAT
+      intensity: 5.0
 
   #' Polarity used. Must be "pos" or "neg". STRING
   polarity: pos
@@ -57,7 +57,7 @@ ms:
       #' Relative in ppm.
       ppm:
         #' Relative mass tolerance for MS2 in ppm. FLOAT
-        ms2: 10
+        ms2: 10.0
 
       #' Absolute in Dalton.
       dalton:
