Limit the number of neighbors for chemical weighting by default (fix #193)

--- a/inst/params/default/weight_annotations.yaml
+++ b/inst/params/default/weight_annotations.yaml
@@ -5,6 +5,8 @@ annotations:
   candidates:
     #' Number of final candidates. INTEGER
     final: 1
+    #' Number of neighbors to keep per feature. INTEGER
+    neighbors: 24
 
   #' Erase MS2 results and keep MS1 only. BOOLEAN
   ms1only: false
