Attribute MS1 edges and adducts per sample only (#194)

--- a/inst/params/default/prepare_features_tables.yaml
+++ b/inst/params/default/prepare_features_tables.yaml
@@ -1,4 +1,10 @@
 ---
+#' Annotations related parameters.
+annotations:
+  #' Number of candidates to keep per feature.
+  candidates:
+    #' Number of samples to keep per feature. INTEGER
+    samples: 1
 #' Files.
 files:
   #' Features files.
