--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(import_spectra)
 export(install)
 export(join_gnps_wrapper)
 export(parse_adduct)
+export(parse_yaml_params)
 export(prepare_annotations_gnps)
 export(prepare_annotations_sirius)
 export(prepare_annotations_spectra)
@@ -33,6 +34,7 @@ export(prepare_libraries_sop_hmdb)
 export(prepare_libraries_sop_lotus)
 export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
+export(prepare_params)
 export(prepare_taxa)
 export(read_mgf_opti)
 export(run_app)
