--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,15 +27,18 @@ Imports:
     archive (>= 1.1.11),
     BiocParallel (>= 1.36.0),
     docopt (>= 0.7.1),
+    archive (>= 1.1.12),
+    docopt (>= 0.7.2),
     dplyr (>= 1.1.4),
     DT (>= 0.33),
     fs (>= 1.6.5),
-    gt (>= 0.11.1),
+    gt (>= 1.0.0),
     httr (>= 1.4.7),
-    httr2 (>= 1.1.1),
+    httr2 (>= 1.1.2),
     igraph (>= 2.1.4),
     IRanges (>= 2.36.0),
     jsonlite (>= 1.9.1),
+    jsonlite (>= 2.0.0),
     logger (>= 0.4.0),
     methods,
     MetaboCoreUtils (>= 1.10.0),
@@ -44,14 +47,14 @@ Imports:
     MsCoreUtils (>= 1.14.1),
     msentropy (>= 0.1.4),
     purrr (>= 1.0.4),
-    reticulate (>= 1.41.0),
+    reticulate (>= 1.42.0),
     rotl (>= 3.1.0),
     shiny (>= 1.10.0),
     shinybusy (>= 0.3.3),
     shinyWidgets (>= 0.9.0),
     Spectra (>= 1.12.0),
     stats,
-    stringi (>= 1.8.4),
+    stringi (>= 1.8.7),
     targets (>= 1.10.1),
     tidyfst (>= 1.8.1),
     tidyselect (>= 1.2.1),
