--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,18 +60,18 @@ Imports:
     visNetwork (>= 2.1.2),
     yaml (>= 2.3.10)
 Suggests:
-    BiocManager,
-    knitr,
-    lifecycle,
-    pkgload,
-    R.utils,
-    rlang,
-    shinyhelper,
-    shinyjs,
-    shinytest2,
-    shinyvalidate,
-    spelling,
-    testthat (>= 3.0.0)
+    BiocManager (>= 1.30.25),
+    knitr (>= 1.50),
+    lifecycle (>= 1.0.4),
+    pkgload (>= 1.4.0),
+    R.utils (>= 2.13.0),
+    rlang (>= 1.1.6),
+    shinyhelper (>= 0.3.2),
+    shinyjs (>= 2.1.0),
+    shinytest2 (>= 0.4.1),
+    shinyvalidate (>= 0.1.3),
+    spelling (>= 2.3.1),
+    testthat (>= 3.2.3)
 SystemRequirements:
     python (>= 3.10)
 VignetteBuilder:
