--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Prepare
         run: |
-          echo "PLATFORM_PAIR=linux-amd64" >> $GITHUB_ENV
+          echo PLATFORM_PAIR=linux-amd64 >> "$GITHUB_ENV"
       
       - name: Docker meta
         id: meta
@@ -85,7 +85,7 @@ jobs:
 
       - name: Prepare
         run: |
-          echo "PLATFORM_PAIR=linux-arm64" >> $GITHUB_ENV
+          echo PLATFORM_PAIR=linux-arm64 >> "$GITHUB_ENV"
       
       - name: Docker meta
         id: meta
@@ -161,12 +161,11 @@ jobs:
       - name: Create manifest list and push
         working-directory: /tmp/digests
         run: |
-          # Add the 'latest' tag
           docker buildx imagetools create \
-            -t ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} \
-            -t ${{ env.REGISTRY_IMAGE }}:latest \
-            $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
+          -t "${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}" \
+          -t "${{ env.REGISTRY_IMAGE }}:latest" \
+          "$(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")" \
+          "$(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)"
 
       - name: Inspect image
         run: |
