optimize Docker image

--- a/inst/Dockerfile
+++ b/inst/Dockerfile
@@ -1,6 +1,7 @@
+# Use the Bioconductor base image
 FROM bioconductor/bioconductor_docker:RELEASE_3_21-R-4.5.0
 
-# Add a non-root user and create the R library directory
+# Add a non-root user and set up the R library directory
 RUN useradd -m tima-user && \
     mkdir -p /home/tima-user/Library/Frameworks/R.framework/Resources/site-library && \
     chown -R tima-user:tima-user /home/tima-user
@@ -13,17 +14,14 @@ USER tima-user
 WORKDIR /home/tima-user
 
 # Install R dependencies
-RUN Rscript -e "devtools::install_github('taxonomicallyinformedannotation/tima')"
-# RUN Rscript -e "install.packages('tima', repos = c('https://taxonomicallyinformedannotation.r-universe.dev', 'https://bioc.r-universe.dev', 'https://cran.r-universe.dev'))"
-
-# Additional install
-RUN Rscript -e "tima::install()"
+RUN Rscript -e "devtools::install_github('taxonomicallyinformedannotation/tima')" && \
+    Rscript -e "tima::install()"
 
 # Expose the necessary ports for Shiny
 EXPOSE 3838
 
-# Disable healthcheck (if you really want to disable it)
+# Disable healthcheck
 HEALTHCHECK NONE
 
-# Define default command (commented out)
-CMD ["Rscript -e 'tima::run_app()'"]
+# Define default command
+CMD ["Rscript", "-e", "tima::run_app()"]
