--- a/inst/params/default/filter_annotations.yaml
+++ b/inst/params/default/filter_annotations.yaml
@@ -40,4 +40,4 @@ ms:
     #' For retention time.
     rt:
       #' Retention time tolerance for library in minutes. FLOAT
-      library: 0.1
+      library: .inf
