externalize some functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -94,6 +94,7 @@ Collate:
     'parse_yaml_params.R'
     'parse_cli_params.R'
     'get_default_paths.R'
+    'get_path.R'
     'get_params.R'
     'dist_groups.R'
     'decorate_masses.R'
@@ -114,9 +115,10 @@ Collate:
     'create_dir.R'
     'change_params_small.R'
     'clean_bio.R'
-    'filter_high_confidence_only.R'
     'columns_model.R'
     'clean_collapse.R'
+    'summarize_results.R'
+    'filter_high_confidence_only.R'
     'clean_chemo.R'
     'complement_metadata_structures.R'
     'copy_backbone.R'
