--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Authors@R: c(
 Maintainer: Adriano Rutz <adafede@gmail.com>
 Description: This package provides the infrastructure to perform
     Taxonomically Informed Metabolite Annotation.
-License: GPL (>= 3)
+License: AGPL (>= 3)
 URL: https://github.com/taxonomicallyinformedannotation/tima,
     https://taxonomicallyinformedannotation.github.io/tima,
     https://taxonomicallyinformedannotation.github.io/tima-shinylive
