Adding minimal output

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -147,6 +147,7 @@ Collate:
     'harmonize_names_sirius.R'
     'harmonize_spectra.R'
     'install.R'
+    'minimize_results.R'
     'pre_harmonize_names_sirius.R'
     'select_annotations_columns.R'
     'prepare_annotations_gnps.R'
