exporting `fake_...` functions in case resources are not available

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(create_components)
 export(create_dir)
 export(create_edges_spectra)
 export(export_output)
+export(fake_ecmdb)
+export(fake_hmdb)
+export(fake_lotus)
 export(filter_annotations)
 export(get_default_paths)
 export(get_example_files)
