--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -604,6 +604,9 @@ similarities:
     #' For edges. FLOAT
     edges: 0.7
 
+    #' Matched peaks. INTEGER
+    matched_peaks: 6
+
 #' Tools used for each step.
 tools:
   #' Tool used to store metadata.
