switch to Quarto vignettes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,7 +75,8 @@ Suggests:
 SystemRequirements:
     python (< 3.14,>= 3.10)
 VignetteBuilder:
-    knitr
+    knitr,
+    quarto
 biocViews: metaboliteAnnotation, chemotaxonomy, scoringSystem, naturalProducts, computationalMetabolomics, taxonomicDistance, specializedMetabolome
 ByteCompile: true
 Config/Needs/website: rmarkdown
