--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,7 @@ Maintainer: Adriano Rutz <adafede@gmail.com>
 Description: This package provides the infrastructure to perform
     Taxonomically Informed Metabolite Annotation.
 License: AGPL (>= 3)
-URL: https://github.com/taxonomicallyinformedannotation/tima,
-    https://taxonomicallyinformedannotation.github.io/tima,
-    https://taxonomicallyinformedannotation.github.io/tima-shinylive
+URL: https://github.com/taxonomicallyinformedannotation/tima, https://taxonomicallyinformedannotation.github.io/tima, https://taxonomicallyinformedannotation.github.io/tima-shinylive, https://taxonomicallyinformedannotation.github.io/tima/
 BugReports: https://github.com/taxonomicallyinformedannotation/tima/issues
 Depends:
     R (>= 4.4.0)
