--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,11 +8,11 @@ figure:
 
 template:
   bootstrap: 5
-  light-switch: true
+  light-switch: yes
   opengraph:
     image:
       src: man/figures/logo.svg
-      alt: "Taxonomically Informed Metabolite Annotation"
+      alt: Taxonomically Informed Metabolite Annotation
   params:
     google_site_verification: Bt77rpBuC_R-0p62TWtA_ba5rvx-PuSEMv4LHg1UsOo
 
