--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
 export(prepare_params)
 export(prepare_taxa)
+export(process_smiles)
 export(read_mgf_opti)
 export(run_app)
 export(sanitize_spectra)
