--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,18 +1,14 @@
 ---
 name: docker
-
 permissions: read-all
-
 on:
   push:
     branches:
-      - "main"
-  workflow_dispatch:
-
+      - main
+  workflow_dispatch: null
 env:
   DOCKER_SERVICE: tima-full
   REGISTRY_IMAGE: adafede/tima-r
-
 jobs:
   build-amd64:
     runs-on: ubuntu-latest
@@ -24,29 +20,23 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
       - name: Prepare
         run: |
           echo PLATFORM_PAIR=linux-amd64 >> "$GITHUB_ENV"
-      
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY_IMAGE }}
-      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
       - name: Build and push by digest
         id: build
         uses: docker/build-push-action@v6
@@ -54,16 +44,15 @@ jobs:
           file: inst/Dockerfile
           platforms: linux/amd64
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE
+            }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-amd64
           cache-to: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-amd64,mode=max
-      
       - name: Export digest
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
-      
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
@@ -71,7 +60,6 @@ jobs:
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
-
   build-arm64:
     runs-on: warp-ubuntu-latest-arm64-2x
     steps:
@@ -82,29 +70,23 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
       - name: Prepare
         run: |
           echo PLATFORM_PAIR=linux-arm64 >> "$GITHUB_ENV"
-      
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY_IMAGE }}
-      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
       - name: Build and push by digest
         id: build
         uses: docker/build-push-action@v6
@@ -112,16 +94,15 @@ jobs:
           file: inst/Dockerfile
           platforms: linux/arm64
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE
+            }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-arm64
           cache-to: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-arm64,mode=max
-      
       - name: Export digest
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
-      
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
@@ -129,7 +110,6 @@ jobs:
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
-
   merge:
     runs-on: ubuntu-latest
     needs:
@@ -142,33 +122,35 @@ jobs:
           path: /tmp/digests
           pattern: digests-*
           merge-multiple: true
-      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY_IMAGE }}
-      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
       - name: Create manifest list and push
         working-directory: /tmp/digests
-        run: |
+        run: >
           # Add the 'latest' tag
-          docker buildx imagetools create \
-          -t ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} \
-          -t ${{ env.REGISTRY_IMAGE }}:latest \
-          $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-          $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
 
+          docker buildx imagetools create \
+
+          -t ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }} \
+
+          -t ${{ env.REGISTRY_IMAGE }}:latest \
+
+          $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+
+          $(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)
       - name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+        run: >
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{
+          steps.meta.outputs.version }}
+
           docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:latest
