--- a/altdoc/quarto_website.yml
+++ b/altdoc/quarto_website.yml
@@ -38,6 +38,9 @@ website:
       - icon: github
         href: $ALTDOC_PACKAGE_URL_GITHUB
         aria-label: $ALTDOC_PACKAGE_NAME GitHub
+  body-header: |
+    <!-- 100% privacy-first analytics -->
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   sidebar:
     contents:
       - section: Functions
