--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,6 +60,7 @@ Imports:
 Suggests:
     altdoc (>= 0.5.0),
     BiocManager (>= 1.30.25),
+    BiocVersion (>= 3.20.0),
     knitr (>= 1.50),
     lifecycle (>= 1.0.4),
     pkgload (>= 1.4.0),
