--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,6 +61,7 @@ Suggests:
     altdoc (>= 0.5.0),
     BiocManager (>= 1.30.25),
     BiocVersion (>= 3.20.0),
+    grateful (>= 0.2.12),
     knitr (>= 1.50),
     lifecycle (>= 1.0.4),
     pkgload (>= 1.4.0),
