--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -73,7 +73,8 @@ Suggests:
     shinytest2 (>= 0.4.1),
     shinyvalidate (>= 0.1.3),
     spelling (>= 2.3.2),
-    testthat (>= 3.3.0)
+    testthat (>= 3.3.0),
+    withr (>= 3.0.2)
 SystemRequirements:
     python (< 3.14,>= 3.10)
 VignetteBuilder:
