--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,10 @@ export(DEFAULT_BIO_SCORES)
 export(DEFAULT_CANDIDATES_FINAL)
 export(DEFAULT_CANDIDATES_NEIGHBORS)
 export(DEFAULT_CHEM_SCORES)
+export(DEFAULT_HC_MAX_RT_ERROR_MIN)
+export(DEFAULT_HC_SCORE_BIO_MIN)
+export(DEFAULT_HC_SCORE_FINAL_MIN)
+export(DEFAULT_HC_SCORE_INITIAL_MIN)
 export(DEFAULT_LOG_LEVEL)
 export(DEFAULT_MINIMAL_CONSISTENCY)
 export(DEFAULT_MINIMAL_MS1_BIO)
@@ -29,6 +33,7 @@ export(MODIFICATION_REGEX_PATTERN)
 export(PROTON_MASS_DALTONS)
 export(TABLE_EXTENSIONS)
 export(VALID_MS_MODES)
+export(VALID_SIMILARITY_METHODS)
 export(annotate_masses)
 export(annotate_spectra)
 export(calculate_mass_of_m)
