--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -82,7 +82,7 @@ VignetteBuilder:
 biocViews: metaboliteAnnotation, chemotaxonomy, scoringSystem, naturalProducts, computationalMetabolomics, taxonomicDistance, specializedMetabolome
 ByteCompile: true
 Config/testthat/edition: 3
-Config/testthat/parallel: true
+Config/testthat/parallel: false
 Encoding: UTF-8
 Language: en-US
 LazyData: true
