--- a/inst/params/default/prepare_libraries_rt.yaml
+++ b/inst/params/default/prepare_libraries_rt.yaml
@@ -44,6 +44,9 @@ files:
 
 #' Names of the different variables in the input files.
 names:
+  #' Name of the "chemical compound name" in the input. STRING
+  compound_name: structure_name
+
   #' Name of "InChIKey" variable in the input. STRING
   inchikey: inchikey
 
@@ -51,6 +54,9 @@ names:
   mgf:
     #' Name of "InChIKey" in MGF. STRING
     inchikey: null
+
+    #' Name of "name" in MGF. STRING
+    name: NAME
 
     #' Name of "retention time" in MGF. STRING
     retention_time: RTINSECONDS
