--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(DEFAULT_HC_MAX_RT_ERROR_MIN)
 export(DEFAULT_HC_SCORE_BIO_MIN)
 export(DEFAULT_HC_SCORE_FINAL_MIN)
 export(DEFAULT_HC_SCORE_INITIAL_MIN)
+export(DEFAULT_HC_SCORE_SIRIUS_MIN)
+export(DEFAULT_HC_SCORE_SPECTRAL_MIN)
 export(DEFAULT_LOG_LEVEL)
 export(DEFAULT_MINIMAL_CONSISTENCY)
 export(DEFAULT_MINIMAL_MS1_BIO)
