--- a/inst/params/default/weight_annotations.yaml
+++ b/inst/params/default/weight_annotations.yaml
@@ -192,7 +192,7 @@ options:
   force: false
 
   #' Filter high confidence candidates only. BOOLEAN
-  high_confidence: true
+  high_confidence: false
 
   #' Remove ties. BOOLEAN
   remove_ties: false
